# technical_analysis

./: .env.template  .gitignore  LICENSE  README.md  THREADING_OPTIMIZATIONS.md  main.py  pyproject.toml
data/: nse_symbols_list.py
src/: __init__.py  config.py  data_fetcher.py  email_sender.py  main.py  technical_indicators.py  utils.py  visualization.py
